# casasynthesis

./: CMakeLists.txt  README.md
.travis/: clang.docker  gcc.docker
asdmstman/: AsdmColumn.cc  AsdmColumn.h  AsdmIndex.cc  AsdmIndex.h  AsdmStMan.cc  AsdmStMan.h  Register.cc
asdmstman/test/: makeAsdmIndex.cc  tAsdmStMan.cc
casadbus/: CMakeLists.txt
casadbus/plotserver/: PlotServerProxy.cc  PlotServerProxy.h  PlotServerProxy.proxy.h
casadbus/session/: DBusSession.cc  DBusSession.h  DBusSession.proxy.h  Dispatcher.cc  Dispatcher.h
casadbus/synthesis/: ImagerControl.cc  ImagerControl.h
casadbus/types/: functor.h  ptr.h  record.cc  record.h  variant.cc  variant.h
casadbus/utilities/: BusAccess.cc  BusAccess.h  Conversion.cc  Conversion.h  DBusBase.cc  DBusBase.h  Diagnostic.cc  Diagnostic.h  io.cc  io.h
casadbus/viewer/: ViewerProxy.cc  ViewerProxy.h  ViewerProxy.proxy.h
components/: ComponentModels.h
components/ComponentModels/: ComponentList.cc  ComponentList.h  ComponentShape.cc  ComponentShape.h  ComponentType.cc  ComponentType.h  ComponentType2.cc  ConstantSpectrum.cc  ConstantSpectrum.h  DiskShape.cc  FluxCalc_SS_JPL_Butler.cc  FluxStandard.cc  FluxStandard.h  FluxStdsQS.cc  FluxStdsQS.h  FluxStdsQS2.cc  GaussianDeconvolver.cc  GaussianDeconvolver.h  GaussianShape.cc  LimbDarkenedDiskShape.cc  LimbDarkenedDiskShape.h  PointShape.cc  PointShape.h  SkyCompBase.h  SkyCompRep.cc  SkyCompRep.h  SkyComponent.cc  SkyComponent.h  SkyComponentFactory.cc  SkyComponentFactory.h  SpectralIndex.cc  SpectralIndex.h  SpectralModel.cc  SpectralModel.h  TabularSpectrum.cc  TabularSpectrum.h  TwoSidedShape.cc  TwoSidedShape.h
components/SpectralComponents/: CompiledSpectralElement.cc  CompiledSpectralElement.h  GaussianMultipletSpectralElement.h  GaussianSpectralElement.cc  GaussianSpectralElement.h  LogTransformedPolynomialSpectralElement.h  LorentzianSpectralElement.cc  LorentzianSpectralElement.h  PCFSpectralElement.cc  PCFSpectralElement.h  PolynomialSpectralElement.cc  PolynomialSpectralElement.h  PowerLogPolynomialSpectralElement.cc  PowerLogPolynomialSpectralElement.h  ProfileFit1D.h  SpectralElement.cc  SpectralElement.h  SpectralElement2.cc  SpectralElementFactory.cc  SpectralEstimate.h  SpectralList.cc  SpectralList.h  SpectralListFactory.cc  SpectralListFactory.h
graphics/: Graphics.h
graphics/GenericPlotter/: Plot.h  PlotAnnotation.h  PlotCanvas.cc  PlotCanvas.h  PlotCanvasLayout.cc  PlotCanvasLayout.h  PlotData.cc  PlotData.h  PlotEvent.cc  PlotEvent.h  PlotEventHandler.h  PlotFactory.cc  PlotFactory.h  PlotItem.cc  PlotItem.h  PlotLogger.cc  PlotLogger.h  PlotOperation.cc  PlotOperation.h  PlotOptions.cc  PlotOptions.h  PlotPanel.h  PlotShape.h  PlotTool.cc  PlotTool.h  Plotter.cc  Plotter.h  ProgressMonitor.h  SimplePlotter.cc  SimplePlotter.h
graphics/Graphics/: PGPLOT.h  PGPlotterLocal.cc  PGPlotterLocal.h  X11Intrinsic.h
graphics/X11/: X11Util.h
imageanalysis/: ImageTypedefs.h
imageanalysis/Annotations/: AnnAnnulus.cc  AnnAnnulus.h  AnnCenterBox.cc  AnnCenterBox.h  AnnCircle.cc  AnnCircle.h  AnnEllipse.cc  AnnEllipse.h  AnnLine.cc  AnnLine.h  AnnPolygon.cc  AnnPolygon.h  AnnPolyline.cc  AnnPolyline.h  AnnRectBox.cc  AnnRectBox.h  AnnRegion.cc  AnnRegion.h  AnnRotBox.cc  AnnRotBox.h  AnnSymbol.cc  AnnSymbol.h  AnnText.cc  AnnText.h  AnnVector.cc  AnnVector.h  AnnotationBase.cc  AnnotationBase.h  RegionTextList.cc  RegionTextList.h
imageanalysis/IO/: AsciiAnnotationFileLine.cc  AsciiAnnotationFileLine.h  FitterEstimatesFileParser.cc  FitterEstimatesFileParser.h  ImageFitterResults.cc  ImageFitterResults.h  ImageProfileFitterResults.cc  ImageProfileFitterResults.h  LogFile.cc  LogFile.h  OutputDestinationChecker.cc  OutputDestinationChecker.h  ProfileFitterEstimatesFileParser.cc  ProfileFitterEstimatesFileParser.h  RegionTextParser.cc  RegionTextParser.h
imageanalysis/ImageAnalysis/: AntennaResponses.cc  AntennaResponses.h  BeamManipulator.h  CasaImageBeamSet.cc  CasaImageBeamSet.h  ComplexImageRegridder.cc  ComplexImageRegridder.h  ComponentImager.cc  ComponentImager.h  Image1DSmoother.h  Image2DConvolver.h  ImageAnalysis.cc  ImageAnalysis.h  ImageBoxcarSmoother.h  ImageCollapser.h  ImageCollapser.tcc  ImageCollapserData.cc  ImageCollapserData.h  ImageConcatenator.h  ImageConvolver.h  ImageCropper.h  ImageDecimator.h  ImageDecimatorData.h  ImageDecomposer.h  ImageFFT.cc  ImageFFT.h  ImageFFTer.h  ImageFactory.h  ImageFactory2.cc  ImageFit1D.h  ImageFitter.cc  ImageFitter.h  ImageHanningSmoother.h  ImageHistograms.h  ImageHistory.h  ImageInputProcessor.cc  ImageInputProcessor.h  ImageInputProcessor2.tcc  ImageMaskAttacher.h  ImageMaskedPixelReplacer.h  (+50 more)
imageanalysis/Regions/: CasacRegionManager.cc  CasacRegionManager.h
imageanalysis/Utilities/: SpectralImageUtil.cc  SpectralImageUtil.h
imageanalysis/apps/: imcollapse.cc  imfit.cc
install/: CASA.cmake  config.cmake  target.cmake
mstransform/MSTransform/: MSTransform.cc  MSTransform.h  MSTransformBufferImpl.cc  MSTransformBufferImpl.h  MSTransformDataHandler.cc  MSTransformDataHandler.h  MSTransformIterator.cc  MSTransformIterator.h  MSTransformIteratorFactory.cc  MSTransformIteratorFactory.h  MSTransformManager.cc  MSTransformManager.h  MSTransformRegridder.cc  MSTransformRegridder.h  MSUVBin.cc  MSUVBin.h
msvis/MSVis/: AsynchronousInterface.cc  AsynchronousInterface.h  AsynchronousInterface2.h  AsynchronousTools.cc  AsynchronousTools.h  AveragingTvi2.cc  AveragingTvi2.h  AveragingVi2Factory.cc  AveragingVi2Factory.h  CalVisBuffer.cc  CalVisBuffer.h  CalibratingVi2FactoryI.cc  CalibratingVi2FactoryI.h  FinalTvi2.cc  FinalTvi2.h  GroupProcessor.cc  GroupProcessor.h  GroupWorker.cc  GroupWorker.h  IteratingParameters.cc  IteratingParameters.h  LayeredVi2Factory.cc  LayeredVi2Factory.h  MSAnalysis.cc  MSAnalysis.h  MSContinuumSubtractor.cc  MSMoments.h  MSUVWGenerator.cc  MSUVWGenerator.h  MSUtil.cc  MSUtil.h  MeasurementSet2.cc  MsRows.cc  (+96 more)
stdcasa/: CMakeLists.txt  version.h  version2.cc  xerces.h
stdcasa/StdCasa/: CasacSupport.cc  CasacSupport.h  variant.cc
synthesis/: CMakeLists.txt
(+633 files in other folders)
